--- a/views/test.ejs
+++ b/views/test.ejs
@@ -3,8 +3,8 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Email</th>
-      <th>Zip Code</th>
+      <th>Picture</th>
+      <th>Price</th>
       <th>Edit</th>
       <th>Delete</th>
     </tr>
