--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,103 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=PT+Serif&family=Playfair+Display&display=swap');
+
 body {
-    background: orange;
+    background: ;
+}
+
+/* CONTAINER */
+
+/* https://dev.solteq.com/2016/12/02/building-a-responsive-product-grid-with-css-flexbox/ */
+
+.container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    /* flex-direction: column; */
+}
+
+/* */
+
+.product-grid {
+    padding: 30px 48px;
+    width: 210px;
+}
+
+.product-image {
+    position: relative;
+}
+
+.decor {
+    position: absolute;
+    width: 80%;
+    height: 95%;
+    /* background: rgba(165, 154, 154, 0.301); */
+    background: #ee9bbd57;
+    z-index: -1;
+    display: ;
+}
+
+.chevron {
+    margin-right: 20px;
+}
+
+.category-names {
+    list-style: none;
+    margin-bottom: 30px;
+}
+
+.category-names>li {
+    margin: 5px 0;
+}
+
+.category-names>li>a {
+    color: rgba(128, 128, 128, 0.995);
+}
+
+.new-product-label, .product-like-icon {
+    position: absolute;
+}
+
+.rating {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.large-text {
+    font-size: 1.2em;
+}
+
+.product-button-group {
+    display: none;
+}
+
+.brand-name {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 0.8rem;
+    color: rgba(128, 128, 128, 0.87);
+}
+
+.price {
+    color: #AB096A;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.product-grid:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.09), 0 6px 6px rgba(0, 0, 0, 0.06);
+    transition: box-shadow 0.4s ease-in-out;
+}
+
+.new-product-label {
+    color: #FFF;
+    background: #AB096A;
+    border-radius: 5px;
+    padding: 1px 10px;
+    position: absolute;
+    left: 0;
+    font-family: 'PT Serif', serif;
 }
