--- a/views/test.ejs
+++ b/views/test.ejs
@@ -12,7 +12,7 @@
   <tbody>
     <tr>
       <td>
-        <a href="<%= `/products/${product._id}` %>">
+        <a href="<%= `/products/${product.nameId}` %>">
           <%= product.name %>
         </a>
       </td>
