products are displayed by name instead of id now

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
         <% products.forEach(product => { %>
         <tr>
             <td>
-                <a href="<%= `/products/${product._id}` %>">
+                <a href="<%= `/products/${product.nameId}` %>">
                     <%= product.name %>
                 </a>
             </td>
