added styles and included logo

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav>
+    <!-- <nav>
         <div>
             <h1 id="title">Bonico</h1>
         </div>
@@ -25,6 +25,32 @@
             <a href="/contact">
                 <span class="button">Contact</span>
             </a>
+        </div>
+    </nav> -->
+
+    <nav class="navbar">
+        <div class="top-decor"> <!-- I guess this is not necessary anymore... gona check tomorow -->
+            ¡Envíos gratis a toda Colombia!
+        </div>
+        <div style="height: 1.5rem;">
+            
+        </div>
+        <div class="nav-content">
+            <!-- <h1 class="logo">Phono</h1> -->
+            <img class="logo" src="/images/logo.png" alt="" srcset="">
+            <ul class="nav">
+                <li><a href="#home">Tienda</a></li>
+                <li><a href="#about">Marcas</a></li>
+                <li><a href="#about">Contáctanos</a></li>
+
+                <li style="display: flex; justify-content: center; align-items: center;">
+                    
+                    <a>Mi carro</a>
+                    <img class="shopping-cart" src="./img/shopping-cart.svg" alt="">
+                </li>
+                <!-- <li><a href="#specs">Specs</a></li>
+            <li><a href="#contact">Contact</a></li> -->
+            </ul>
         </div>
     </nav>
 
