--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=PT+Serif&family=Playfair+Display&display=swap');
-
 body {
     background: ;
 }
@@ -12,8 +11,90 @@ body {
 .container {
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-start;
+    justify-content: center;
     /* flex-direction: column; */
+}
+
+/* */
+
+.navbar {
+    position: relative;
+}
+
+.navbar {
+    font-size: 1.2rem;
+    /* padding-top: 0.9rem;
+    padding-bottom: 0.9rem; */
+    padding: 0.9rem 0;
+}
+
+.top-decor {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 1.8rem;
+    background: #E86EA0;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFF;
+}
+
+.shopping-cart {
+    background: ;
+    border-radius: 50%;
+    padding: 5px;
+}
+
+.navbar li {
+    list-style-type: none;
+    margin: 0 0.5rem;
+}
+
+li a {
+    font-size: 1rem;
+}
+
+/* .navbar .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+} */
+
+.navbar .logo {
+    /* font-size: 2rem; */
+    width: 60px;
+}
+
+.navbar ul {
+    justify-self: flex-end;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar a {
+    padding: 0 1rem;
+    /* */
+    margin-right: 5px;
+    border-bottom: 2px solid #EF9EBF;
+}
+
+a {
+    color: #444;
+    text-decoration: none;
+}
+
+.nav-content {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1100px;
+    margin: auto;
+}
+
+.navbar a:hover {
+    color: #555;
 }
 
 /* */
