--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -37,11 +37,11 @@
         </div>
         <div class="nav-content">
             <!-- <h1 class="logo">Phono</h1> -->
-            <img class="logo" src="/images/logo.png" alt="" srcset="">
+            <a href="/"><img class="logo" src="/images/logo.png" alt="" srcset=""></a>
             <ul class="nav">
-                <li><a href="#home">Tienda</a></li>
-                <li><a href="#about">Marcas</a></li>
-                <li><a href="#about">Contáctanos</a></li>
+                <li><a href="/products">Tienda</a></li>
+                <!-- <li><a href="#about">Marcas</a></li> -->
+                <li><a href="/">Contáctanos</a></li>
 
                 <li style="display: flex; justify-content: center; align-items: center;">
                     
