--- a/views/test.ejs
+++ b/views/test.ejs
@@ -4,6 +4,7 @@
     <tr>
       <th>Name</th>
       <th>Picture</th>
+      <th>Description</th>
       <th>Price</th>
       <th>Edit</th>
       <th>Delete</th>
@@ -19,6 +20,11 @@
       <td>
         <%= product.picture %>
       </td>
+
+      <td>
+        <%= product.description %>
+      </td>
+
       <td>
         <%= product.price %>
       </td>
