--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
                 </a>
             </td>
             <td><%= product.picture %></td>
-            <td><%= product.price %></td>
+            <td>$<%= product.price %></td>
             <td>
                 <a href="<%=`/products/${product._id}/edit` %>">
                     Edit
