--- a/views/item.ejs
+++ b/views/item.ejs
@@ -6,6 +6,6 @@
     </tr>
     <tr>
         <th>Price</th>
-        <td><%= product.price %></td>
+        <td>$<%= product.price %></td>
     </tr>
 </table>
