--- a/views/products.ejs
+++ b/views/products.ejs
@@ -4,7 +4,7 @@
         <th>Name</th>
         <td><%= product.name %></td>
         <img src="<%= product.picture %>" alt="" style="width: 80px">
-        <td><%= product.price %></td>
+        <td>$<%= product.price %></td>
     </tr>
 
 </table>
