--- a/views/test.ejs
+++ b/views/test.ejs
@@ -64,11 +64,12 @@
       </div>
       <div class="info">
         <h1><%= product.name %></h1>
-        <h1>$<%= product.price %></h1>
+        <h1 style="color: #ec88b0">$<%= product.price %></h1>
       </div>
     </div>
 
     <div>
+      <h2 style="color: #ec88b0">Descripción</h2>
       <%= product.description %>
     </div>
   </div>
