--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,11 +29,12 @@
     </nav> -->
 
     <nav class="navbar">
-        <div class="top-decor"> <!-- I guess this is not necessary anymore... gona check tomorow -->
+        <div class="top-decor">
+            <!-- I guess this is not necessary anymore... gona check tomorow -->
             ¡Envíos gratis a toda Colombia!
         </div>
         <div style="height: 1.5rem;">
-            
+
         </div>
         <div class="nav-content">
             <!-- <h1 class="logo">Phono</h1> -->
@@ -44,7 +45,7 @@
                 <li><a href="/">Contáctanos</a></li>
 
                 <li style="display: flex; justify-content: center; align-items: center;">
-                    
+
                     <a>Mi carro</a>
                     <img class="shopping-cart" src="./img/shopping-cart.svg" alt="">
                 </li>
@@ -55,6 +56,60 @@
     </nav>
 
     <%- body %>
+
+    <footer class="footer-distributed">
+
+        <div class="footer-left">
+            <img src="/images/logo.png">
+            <!-- <h3>About<span>Eduonix</span></h3> -->
+
+            <p class="footer-links">
+                <a href="#">Home</a>
+                |
+                <a href="#">Blog</a>
+                |
+                <a href="#">About</a>
+                |
+                <a href="#">Contact</a>
+            </p>
+
+            <p class="footer-company-name">© 2019 Bonico Store</p>
+        </div>
+
+        <div class="footer-center">
+            <h3>Contáctanos</h3>
+            <div>
+                <!-- <i class="fa fa-map-marker"></i>
+                <p><span></p> -->
+            </div>
+
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+57 3012019457</p>
+            </div>
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:support@eduonix.com">bonicostore@hotmail.com</a></p>
+            </div>
+        </div>
+        <div class="footer-right">
+            <p class="footer-company-about">
+                <span>About the company</span>
+                We offer training and skill building courses across Technology, Design, Management, Science and
+                Humanities.</p>
+            <div class="footer-icons">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-youtube"></i></a>
+            </div>
+        </div>
+    </footer>
+
+    <!-- <footer>
+
+    </footer> -->
 
 </body>
 
