--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -93,10 +93,8 @@
             </div>
         </div>
         <div class="footer-right">
-            <p class="footer-company-about">
-                <span>About the company</span>
-                We offer training and skill building courses across Technology, Design, Management, Science and
-                Humanities.</p>
+            <h3>Encúentranos en redes</h3>
+
             <div class="footer-icons">
                 <a href="#"><i class="fa fa-facebook"></i></a>
                 <a href="#"><i class="fa fa-twitter"></i></a>
