--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,23 +11,6 @@
 </head>
 
 <body>
-    <!-- <nav>
-        <div>
-            <h1 id="title">Bonico</h1>
-        </div>
-        <div class="links">
-            <a href="/">
-                <span class="button">Home</span>
-            </a>
-            <a href="/products">
-                <span class="button">Products</span>
-            </a>
-            <a href="/contact">
-                <span class="button">Contact</span>
-            </a>
-        </div>
-    </nav> -->
-
     <nav class="navbar">
         <div class="top-decor">
             <!-- I guess this is not necessary anymore... gona check tomorow -->
@@ -49,8 +32,6 @@
                     <a>Mi carro</a>
                     <img class="shopping-cart" src="./img/shopping-cart.svg" alt="">
                 </li>
-                <!-- <li><a href="#specs">Specs</a></li>
-            <li><a href="#contact">Contact</a></li> -->
             </ul>
         </div>
     </nav>
@@ -61,10 +42,8 @@
 
         <div class="footer-left">
             <img src="/images/logo.png">
-            <!-- <h3>About<span>Eduonix</span></h3> -->
-
             <p class="footer-links">
-                <a href="#">Home</a>
+                <a href="/">Home</a>
                 |
                 <a href="#">Blog</a>
                 |
@@ -78,10 +57,6 @@
 
         <div class="footer-center">
             <h3>Contáctanos</h3>
-            <div>
-                <!-- <i class="fa fa-map-marker"></i>
-                <p><span></p> -->
-            </div>
 
             <div>
                 <i class="fa fa-phone"></i>
