--- a/views/test.ejs
+++ b/views/test.ejs
@@ -38,12 +38,11 @@
     <div class="categories">
       <h3>Categorías</h3>
       <ul class="category-names" style="display: flex; flex-direction: column;">
-        <li style="margin-top: 30px;"><img src="../img/right-chevron.svg" class="chevron" alt=""><a href="#">Skala</a>
-        </li>
-        <li><img src="../img/right-chevron.svg" class="chevron" alt=""><a>Novex</a></li>
-        <li><img src="../img/right-chevron.svg" class="chevron" alt=""><a>Lorem Ipsum</a></li>
-        <li><img src="../img/right-chevron.svg" class="chevron" alt=""><a>Lorem Ipsum</a></li>
-        <li><img src="../img/right-chevron.svg" class="chevron" alt=""><a>Lorem Ipsum</a></li>
+        <li><img src="/images/right-chevron.svg" class="chevron" style="width: 10px" alt=""><a>Skala</a></li>
+        <li><img src="/images/right-chevron.svg" class="chevron" style="width: 10px" alt=""><a>Novex</a></li>
+        <li><img src="/images/right-chevron.svg" class="chevron" style="width: 10px" alt=""><a>Lorem Ipsum</a></li>
+        <li><img src="/images/right-chevron.svg" class="chevron" style="width: 10px" alt=""><a>Lorem Ipsum</a></li>
+        <li><img src="/images/right-chevron.svg" class="chevron" style="width: 10px" alt=""><a>Lorem Ipsum</a></li>
       </ul>
     </div>
 
@@ -75,6 +74,12 @@
   </div>
 
 
+</div>
+
+
+<div class="may-like">
+
+  2
 </div>
 
 <!-- <div class="c">
