added a 'products you may like' section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -384,3 +384,14 @@ footer {
         margin-left: 0;
     }
 }
+
+/***/
+
+.may-like {
+    padding: 50px;
+}
+
+.similar-products {
+    display: flex;
+    justify-content: space-between;
+}
