--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -43,13 +43,13 @@
         <div class="footer-left">
             <img src="/images/logo.png">
             <p class="footer-links">
-                <a href="/">Home</a>
+                <a href="/">Inicio</a>
                 |
                 <a href="#">Blog</a>
                 |
-                <a href="#">About</a>
+                <a href="#">Nosotros</a>
                 |
-                <a href="#">Contact</a>
+                <a href="#">Contáctanos</a>
             </p>
 
             <p class="footer-company-name">© 2019 Bonico Store</p>
