--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=1">
-    <title>Confetti Cuisine</title>
+    <title>Bonico</title>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
         type='text/css'>
     <link rel="stylesheet" href="/css/style.css">
